Correcting z-indexes. Hmm.

--- a/src/main/java/org/nsesa/editor/gwt/editor/client/ui/main/EditorViewImpl.css
+++ b/src/main/java/org/nsesa/editor/gwt/editor/client/ui/main/EditorViewImpl.css
@@ -1,7 +1,5 @@
 .globalGlassPanel {
-    z-index: 150;
 }
 
 .globalPopup {
-    z-index: 151;
 }
